# JH-Toolkit

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  adapt_8h.html  adapt_8h.js  adl__apply_8h.html  adl__apply_8h.js  annotated.html  annotated_dup.js  array_8h.html  array_8h.js  async.html  bits_8h.html  bits_8h.js  bytes__view_8h.html  bytes__view_8h.js  char_8h.html  char_8h.js  classes.html  classjh_1_1async_1_1event__signal-members.html  classjh_1_1async_1_1event__signal.html  classjh_1_1async_1_1event__signal.js  classjh_1_1async_1_1fiber-members.html  classjh_1_1async_1_1fiber.html  classjh_1_1async_1_1fiber.js  classjh_1_1async_1_1generator-members.html  classjh_1_1async_1_1generator.html  classjh_1_1async_1_1generator.js  classjh_1_1async_1_1generator__range-members.html  classjh_1_1async_1_1generator__range.html  classjh_1_1async_1_1generator__range.js  classjh_1_1async_1_1generator__range_1_1iterator-members.html  classjh_1_1async_1_1generator__range_1_1iterator.html  classjh_1_1async_1_1generator__range_1_1iterator.js  classjh_1_1async_1_1listener-members.html  classjh_1_1async_1_1listener.html  classjh_1_1async_1_1listener.js  (+580 more)
.github/workflows/: ci.yml  docs-check.yml  docs-doxygen.yml  docs_hygiene_check.py  docs_presence_check.py  docs_presence_check.yml  generate_dependencies.py  release.yml  requirements.txt  unescape.py  update-dependencies.yml
cmake/: jh-toolkit-config.cmake.in
docs/: build.md  data_sink.md  generator.md  immutable_str.md  iterator.md  pod.md  pod_stack.md  pool.md  runtime_arr.md  sequence.md  sim_pool.md  views.md
docs/asynchronous/: fiber.md  generator.md  overview.md  slot.md
docs/conceptual/: closable_container.md  collectable_container.md  container_traits.md  hashable.md  iterator.md  mutex_like.md  overview.md  pod_concepts.md  range_traits.md  sequence.md  tuple_like.md
docs/concurrent/: flat_pool.md  observe_pool.md  occ_box.md  overview.md  pointer_pool.md  resource_pool.md
docs/conventions/: modules.md
docs/core/: flat_multimap.md  immutable_str.md  ordered_map.md  pool.md  runtime_arr.md  sim_pool.md
docs/doxy_settings/: Doxyfile  footer.html  mainpage.md  style.css
docs/macros/: dual_mode_headers.md  overview.md  platform.md  type_name.md
docs/metax/: adl_apply.md  base64.md  char.md  flatten_proxy.md  hash.md  lookup_map.md  overview.md  t_str.md  variant_adt.md
docs/ranges/: adapt.md  collect.md  overview.md  range_adaptor.md  range_wrapper.md  ranges_ext.md  to.md  vis_transform_view.md  zip_view.md
docs/ranges/views/: common.md  enumerate.md  flatten.md  overview.md  transform.md  vis_transform.md  zip.md
docs/serialize_io/: base64.md  huffman.md  overview.md
docs/synchronous/: const_lock.md  control_buf.md  ipc.md  overview.md
docs/synchronous/ipc/: ipc_limits.md  overview.md  process_cond_var.md  process_counter.md  process_launcher.md  process_mutex.md  process_shm_obj.md  shared_process_mutex.md
docs/typing/: monostate.md  null_mutex.md  overview.md
docs/utils/: base64.md  hash_fn.md  overview.md  typed.md
examples/: CMakeLists.txt  ensure_output.h  example_data_sink.cpp  example_generator.cpp  example_immutable_str.cpp  example_occ_box.cpp  example_pod_basics.cpp  example_process_lock.cpp  example_process_shm.cpp  example_string.cpp  hello.cpp  radix_sort.h
examples/process_lock/: CMakeLists.txt  example_awaker.cpp  example_counter.cpp  example_counter_worker.cpp  example_pod_writer.cpp  example_reader.cpp  example_sleeper.cpp  example_writer.cpp
experimental/: data_sink.h  pod_stack.h  radix_sort.h
include/jh/: async  concepts  concurrency  data_sink  data_sink.h  flat_multimap  generator  generator.h  immutable_str  immutable_str.h  ipc  iterator  iterator.h  jindallae  meta  ordered_map  pod  pod.h  pod_stack  pod_stack.h  pool  pool.h  ranges_ext  runtime_arr  runtime_arr.h  sequence  sequence.h  serio  sim_pool  sim_pool.h  str_template.h  sync  typed  view  view.h  views  views.h
include/jh/asynchronous/: fiber.h  generator.h  ipc.h  ipc_limits.h  occ_box.h  process_condition.h  process_counter.h  process_launcher.h  process_mutex.h  shared_process_memory.h  shared_process_mutex.h  slot.h
include/jh/conceptual/: closable_container.h  collectable_container.h  container_traits.h  hashable.h  iterator.h  mutex_like.h  pod_concepts.h  range_traits.h  sequence.h  tuple_like.h
include/jh/concurrent/: flat_pool.h  observe_pool.h  occ_box.h  pointer_pool.h  resource_pool.h
include/jh/core/: flat_multimap.h  immutable_str.h  ordered_map.h  pool.h  runtime_arr.h  sim_pool.h
include/jh/detail/: base64_common.h  shared_ptr_atomic_shim.h
include/jh/locking/: const_lock.h
include/jh/macros/: header_begin.h  header_end.h  platform.h  type_name.h
include/jh/marcos/: header_begin.h  header_end.h  platform.h  type_name.h
include/jh/meta/: adl_apply.h  flatten_proxy.h  hash.h
include/jh/metax/: adl_apply.h  base64.h  (+6 more)
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+124 more)
src/: immutable_str.cpp  runtime_arr_inst.cpp
tests/: CMakeLists.txt  benchmarks.cpp  main.cpp  test_adt.cpp  test_base64.cpp  test_data_sink.cpp  test_fiber.cpp  test_flat_multimap.cpp  test_generator.cpp  test_huffman.cpp  test_immutable_str.cpp  test_lookup_map.cpp  test_occ.cpp  test_ordered_map.cpp  test_pod_stack.cpp  test_pod_sys.cpp  test_pool.cpp  test_proc_cond.cpp  test_proc_counter.cpp  test_proc_mapping.cpp  test_process_lock.cpp  test_ranges.cpp  test_runtime_arr.cpp  test_sequence.cpp  test_shproc_lock.cpp  test_slot.cpp  test_str_template.cpp  test_t_str.cpp  test_view.cpp
tools/conan/: .conanignore  conanfile-all.py  conanfile-pod.py
(+37 files in other folders)
